# FightGameBevy

./: Cargo.toml
assets/maps/: default_map.json  second_map.json
assets/players/: player.json  player1.json  player2.json
crates/animation_plugin/src/: lib.rs
crates/attack_plugin/: Cargo.toml
crates/attack_plugin/src/: lib.rs
crates/bullet_plugin/: Cargo.toml
crates/bullet_plugin/src/: components.rs  lib.rs  systems.rs
crates/config_plugin/: Cargo.toml
crates/config_plugin/src/: game_component.rs  gun.rs  json_repr.rs  lib.rs  player.rs  resource_insertion.rs
crates/controll_plugin/: Cargo.toml
crates/controll_plugin/src/: lib.rs
crates/game_ui/: Cargo.toml
crates/game_ui/src/: builder.rs  components.rs  lib.rs  systems.rs
crates/grounded_plugin/: Cargo.toml
crates/grounded_plugin/src/: lib.rs
crates/gun_plugin/: Cargo.toml
crates/gun_plugin/src/: components.rs  lib.rs  systems.rs
crates/jump_plugin/: Cargo.toml
crates/jump_plugin/src/: lib.rs
crates/one_shot_system/: Cargo.toml
crates/one_shot_system/src/: lib.rs
crates/player_animation_plugin/: Cargo.toml
crates/player_animation_plugin/src/: animation.rs  lib.rs
crates/player_attack_plugin/: Cargo.toml
crates/player_attack_plugin/src/: attack_collision.rs  lib.rs
crates/player_config_plugin/: Cargo.toml
crates/player_gamepad_plugin/: Cargo.toml
crates/player_gamepad_plugin/src/: lib.rs
crates/player_gun_plugin/: Cargo.toml
crates/player_gun_plugin/src/: lib.rs  systems.rs
crates/player_plugin/: Cargo.toml
crates/player_plugin/src/: lib.rs  resource.rs
crates/player_plugin/src/components/: config.rs  mod.rs
crates/player_plugin/src/systems/: damage.rs  fail.rs  mod.rs  movement.rs  repulse.rs  slide.rs
crates/slide_system/: Cargo.toml
crates/slide_system/src/: lib.rs
src/: main.rs  one_shot_system.rs  resources.rs  scene.rs  setup.rs  utils.rs  wrapper.rs
src/gamepad/: mod.rs
src/player/: components.rs  mod.rs  player_config.rs  resource.rs  setup.rs  systems.rs
src/player/systems/: animation.rs  attack.rs  attack_collision.rs  fail.rs  mod.rs  movement.rs  slide.rs
src/test_playground/: components.rs  mod.rs
src/ui/: mod.rs
src/ui/game_ui/: components.rs  mod.rs  systems.rs
src/ui/main_menu/: mod.rs
src/ui/player_config/: components.rs  mod.rs  systems.rs
src/ui/settings/: components.rs  mod.rs
src/world/: component.rs  mod.rs  resource.rs  systems.rs
