[package]
name = "player_animation_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
avian2d = { workspace = true }
grounded_plugin = { workspace = true }
slide_system = { workspace = true }
animation_plugin = { workspace = true }
attack_plugin = { workspace = true }
player_plugin = { workspace = true }
