[package]
name = "player_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
avian2d = { workspace = true }
slide_system = { workspace = true }
grounded_plugin = { workspace = true }
animation_plugin = { workspace = true }
jump_plugin = { workspace = true }
controll_plugin = { workspace = true }
rand = { workspace = true }
config_plugin = { workspace = true }
gun_plugin = { workspace = true }
# player_attack_plugin = { workspace = true }
